--- a/index.html
+++ b/index.html
@@ -9,51 +9,133 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>
-                <span>PHPedit</span>
-                <div class="detail">
-                    <ul>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                        <li>大家好，欢迎来到PHP54+</li>
-                    </ul>
-                </div>
-            </li>
-            <li>
-                <span>mysql</span>
-                <div class="detail">
-                    <ul>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                        <li>大家好，欢迎来到mysql+</li>
-                    </ul>
-                </div>
-            </li>
-            <li>javascript</li>
-            <li>html/css</li>
-            <li>关于作者</li>
-            <a href="/" title="PHP54+"><li>PHP54+</li></a>
-        </ul> 
-        <!-- <span><a href="/" title="PHP54+">PHP54+</a></span> -->
+        <span><a href="/" title="PHP54+">PHP54+</a></span>
+        <span>
+            <a href="javascript:;">PHPedit</a>
+            <div class="detail">
+                <ul>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+1</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+2</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+13</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+14</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+15</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+61</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+71</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+81</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到PHP54+91</a></li>
+                </ul>
+            </div>
+        </span>
+        <span>
+            <a href="javascript:;">mysql</a>
+            <div class="detail">
+                <ul>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+1</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+2</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+13</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+14</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+15</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+61</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+71</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+81</a></li>
+                    <li><a href="javascript:;">大家好，欢迎来到mysqkk+91</a></li>
+                </ul>
+            </div>
+        </span>
+        <span><a href="javascript:;">javascript</a></span>
+        <span><a href="javascript:;">html/css</a></span>
+        <span><a href="javascript:;">关于作者</a></span>
     </header>
+
+    <div class='background'>
+        <div class="shape circle"></div>
+        <div class="shape rectangle"></div>
+        <div class="shape triangle"></div>
+        <div class="shape square-round-three"></div>
+        <div class="shape circle-spin-half"></div>
+    </div>
+
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+    <p>sadfasdfasdf</p>
+<a href="#top" >回到顶部</a>
+
+<!-- <div class="heart"></div> -->
+
+<footer>
+    <div class="list">
+        <ul>
+            <li><a href="javascript:;">PHP54+首页</a></li>
+            <li><a href="javascript:;">所有文章</a></li>
+            <li><a href="javascript:;">关于作者/留言</a></li>
+            <li><a href="javascript:;">友情链接</a></li>
+        </ul>
+    </div>
+    <div class="list">
+        <ul>
+            <li><a href="javascript:;">京ICP备18046247号-1</a></li>
+            <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
+            <li><a href="javascript:;">PHP54技术博客</a></li>
+            <li><a href="javascript:;">网站地图</a></li>
+        </ul>
+    </div>
+    <div class="list">
+        <ul>
+            <li><a href="javascript:;">陈佚 | CHENI</a></li>
+            <li><a href="javascript:;">电话联系</a></li>
+            <li class="green"><a href="javascript:;">15901432750</a></li>
+            <li><a href="javascript:;">微信号联系</a></li>
+            <li class="green"><a href="javascript:;">K65480169</a></li>
+            <li><a href="javascript:;">QQ</a></li>
+            <li class="green"><a href="javascript:;">654080169</a></li>
+            <li><a href="javascript:;">邮箱方式</a></li>
+            <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
+            <li><a href="javascript:;">网站地图</a></li>
+        </ul>
+    </div>
+    <p style="clear:both"></p>
+</footer> 
+
+<script>
+    var p=document.getElementsByTagName('p')[0];
+    var b=document.getElementsByTagName('html');
+    p.onclick=function(){
+        console.log(b);
+        b.style.scrolltop=0;
+    }
+</script>
 </body>
 </html>
