--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         <div class="shape rectangle"></div>
         <div class="shape triangle"></div>
         <div class="shape square-round-three"></div>
-        <div class="shape circle-spin-half"></div>
+        <div class="shape square-round-one"></div>
+        <div class="shape square-round-two"></div>
+        <div class="shape circle-quarter-left-top"></div>
+        <div class="shape heart"></div>
     </div>
 
     <p>sadfasdfasdf</p>
