--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_kkhy0fi9s2.css">
     <title>PHP54技术博客</title>
 </head>
+
 <body>
     <header>
         <span><a href="/" title="PHP54+">PHP54+</a></span>
@@ -58,87 +61,76 @@
         <div class="shape heart"></div>
     </div>
 
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-    <p>sadfasdfasdf</p>
-<a href="#top" >回到顶部</a>
+    <div class="contain">
+        <div class="border">
+            <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+            <div class="general_image_pic"><a href="javascript:;"><img
+                        src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg"
+                        alt="php中文网"></a></div>
+        </div>
 
-<!-- <div class="heart"></div> -->
+        <div class="border">
+            <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
+            <div class="general_image_pic"><a href="javascript:;"><img
+                        src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg"
+                        alt="php中文网"></a></div>
+        </div>
+    </div>
 
-<footer>
-    <div class="list">
-        <ul>
-            <li><a href="javascript:;">PHP54+首页</a></li>
-            <li><a href="javascript:;">所有文章</a></li>
-            <li><a href="javascript:;">关于作者/留言</a></li>
-            <li><a href="javascript:;">友情链接</a></li>
-        </ul>
-    </div>
-    <div class="list">
-        <ul>
-            <li><a href="javascript:;">京ICP备18046247号-1</a></li>
-            <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
-            <li><a href="javascript:;">PHP54技术博客</a></li>
-            <li><a href="javascript:;">网站地图</a></li>
-        </ul>
-    </div>
-    <div class="list">
-        <ul>
-            <li><a href="javascript:;">陈佚 | CHENI</a></li>
-            <li><a href="javascript:;">电话联系</a></li>
-            <li class="green"><a href="javascript:;">15901432750</a></li>
-            <li><a href="javascript:;">微信号联系</a></li>
-            <li class="green"><a href="javascript:;">K65480169</a></li>
-            <li><a href="javascript:;">QQ</a></li>
-            <li class="green"><a href="javascript:;">654080169</a></li>
-            <li><a href="javascript:;">邮箱方式</a></li>
-            <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
-            <li><a href="javascript:;">网站地图</a></li>
-        </ul>
-    </div>
-    <p style="clear:both"></p>
-</footer> 
+    <div class="php54-side-toolbar">
+        <a class="option-box">
+            <i class="iconfont icon-qrcode"></i>
+            <div class="qr-box">
+                <div class="qr-item-box">
+                    <img src="https://www.php54.com/Public/Home/img/wx.jpg" alt="关注公众号">
+                    <p>关注公众号</p>
+                </div>
 
-<script>
-    var p=document.getElementsByTagName('p')[0];
-    var b=document.getElementsByTagName('html');
-    p.onclick=function(){
-        console.log(b);
-        b.style.scrolltop=0;
-    }
-</script>
+                <div class="qr-item-box">
+                    <img src="https://www.php54.com/Public/Home/img/wx.jpg" alt="下载APP">
+                    <p>作者微信</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="#top" class="option-box">
+            <i class="iconfont icon-jiantou-copy-copy"></i>
+        </a>
+    </div>
+
+    <footer>
+        <div class="list">
+            <ul>
+                <li><a href="javascript:;">PHP54+首页</a></li>
+                <li><a href="javascript:;">所有文章</a></li>
+                <li><a href="javascript:;">关于作者/留言</a></li>
+                <li><a href="javascript:;">友情链接</a></li>
+            </ul>
+        </div>
+        <div class="list">
+            <ul>
+                <li><a href="javascript:;">陈佚 | CHENI</a></li>
+                <li><a href="javascript:;">电话联系</a></li>
+                <li class="green"><a href="javascript:;">15901432750</a></li>
+                <li><a href="javascript:;">微信号联系</a></li>
+                <li class="green"><a href="javascript:;">K65480169</a></li>
+                <li><a href="javascript:;">QQ</a></li>
+                <li class="green"><a href="javascript:;">654080169</a></li>
+                <li><a href="javascript:;">邮箱方式</a></li>
+                <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
+                <li><a href="javascript:;">网站地图</a></li>
+            </ul>
+        </div>
+        <div class="list">
+            <ul>
+                <li><a href="javascript:;">京ICP备18046247号-1</a></li>
+                <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
+                <li><a href="javascript:;">PHP54技术博客</a></li>
+                <li><a href="javascript:;">网站地图</a></li>
+            </ul>
+        </div>
+        <p style="clear:both"></p>
+    </footer>
 </body>
+
 </html>
