--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/static/css/home.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_kkhy0fi9s2.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_2a996nb5ay8.css">
     <title>PHP54技术博客</title>
 </head>
 
@@ -48,9 +48,57 @@
         <span><a href="javascript:;">javascript</a></span>
         <span><a href="javascript:;">html/css</a></span>
         <span><a href="javascript:;">关于作者</a></span>
+        <div class="search"></div>
     </header>
 
     <div class='background'>
+        <input type="radio" name="slider" class="slide-radio1" checked id="slider_1">
+        <input type="radio" name="slider" class="slide-radio2" id="slider_2">
+        <input type="radio" name="slider" class="slide-radio3" id="slider_3">
+        <input type="radio" name="slider" class="slide-radio4" id="slider_4">
+        <div class="slider-pagination">
+            <label for="slider_1" class="page1"></label>
+            <label for="slider_2" class="page2"></label>
+            <label for="slider_3" class="page3"></label>
+            <label for="slider_4" class="page4"></label>
+        </div>
+        <div class="next control">
+            <label for="slider_1" class="numb1"><i class="iconfont icon-jiantou-you"></i></label>
+            <label for="slider_2" class="numb2"><i class="iconfont icon-jiantou-you"></i></label>
+            <label for="slider_3" class="numb3"><i class="iconfont icon-jiantou-you"></i></label>
+            <label for="slider_4" class="numb4"><i class="iconfont icon-jiantou-you"></i></label>
+        </div>
+        <div class="previous control">
+            <label for="slider_1" class="numb1"><i class="iconfont icon-jiantou-zuo"></i></label>
+            <label for="slider_2" class="numb2"><i class="iconfont icon-jiantou-zuo"></i></label>
+            <label for="slider_3" class="numb3"><i class="iconfont icon-jiantou-zuo"></i></label>
+            <label for="slider_4" class="numb4"><i class="iconfont icon-jiantou-zuo"></i></label>
+        </div>
+        <div class="slider slide1">
+            <div>
+                <h2>Css Based slider</h2>
+                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+            </div>
+        </div>
+        <div class="slider slide2">
+            <div>
+                <h2>CSS Slider without use of any javascript or jQuery</h2>
+                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+            </div>
+        </div>
+        <div class="slider slide3">
+            <div>
+                <h2>Full screen animation slider</h2>
+                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+            </div>
+        </div>
+        <div class="slider slide4">
+            <div>
+                <h2>css3 slider</h2>
+                <a href="javascript:;" class="button">Back</a> <a href="javascript:;" class="button">Download</a>
+            </div>
+        </div>
+
         <div class="shape circle"></div>
         <div class="shape rectangle"></div>
         <div class="shape triangle"></div>
@@ -62,18 +110,20 @@
     </div>
 
     <div class="contain">
-        <div class="border">
+        <div class="article">
             <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
-            <div class="general_image_pic"><a href="javascript:;"><img
-                        src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg"
-                        alt="php中文网"></a></div>
+            <div class="general_image_pic">
+                <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+            </div>
         </div>
 
-        <div class="border">
+        <div class="article">
             <h3><a href="javascript:;">php中文网-教程_手册_视频-免费php在线学习平台</a></h3>
-            <div class="general_image_pic"><a href="javascript:;"><img
-                        src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg"
-                        alt="php中文网"></a></div>
+            <div class="general_image_pic">
+                <a href="javascript:;"><img src="https://www.php54.com/ueditor/php/upload/image/20190430/1556613833244033.jpg" alt="php中文网"></a>
+                <div class="description">我一直在学习，我也一直在忘记。PHP应该是涉及知识最广的一门语言，上至C，C++下至pythson,java等。每天使用linux服务器的时候修改root及主机名这样简单的操作，我都要花费很多时间去百度，却</div>
+            </div>
         </div>
     </div>
 
