--- a/game.html
+++ b/game.html
@@ -137,8 +137,10 @@
         // 掉落速度
         time: 300,
         // 形状数组
-        shape: [[[0, 0, 0, -1], [-1, 0, 1, 0], 3], [[0, -1, -2], [0, 0, 0], 1], [[0, 0, -1,], [-1, 0, 0], 2]],
-        // shape: [[[0, -1, -2], [0, 0, 0], 1]],
+        // shape: [[[0, 0, 0, -1], [-1, 0, 1, 0], 3], [[0, -1, -2], [0, 0, 0], 1], [[0, 0, -1,], [-1, 0, 0], 2]],
+        shape: [[[0, 0, 0, -1], [-1, 0, 1, 0], [0, -1, -1, -2], [0, 1, 0, 0], [0, 1, 0, 0], [-1, 0, 1, 0], [-1, 0, -1, -2], [-1, 0, 0, 0], 2, 3, 2, 3]],
+        // 当前形状
+        currentShape: 0,
         // 移动定时器容器
         drop: [],
         // 停止移动
@@ -152,7 +154,11 @@
     }
 
     $('td').click(function () {
-        $(this).addClass('light');
+        if ($(this).hasClass('light')) {
+            $(this).removeClass('light');
+        }else{
+            $(this).addClass('light');
+        }
     });
 
     $(document).keydown(function (event) {
@@ -164,17 +170,24 @@
                 clear();
                 break;
             case 38:
-                console.log('上');
+                config.whirl < 4 ? config.whirl++ : config.whirl = 1;
+                // 左移动限制 （禁止超出）
+                config.maxPosition = Math.floor($('tr:first').find('td').length / 2) + (Math.floor($('tr:first').find('td').length / 2) - Math.max.apply(Math, config.currentShape[config.whirl * 2 - 1]));
+                // 右移动限制 （禁止超出）
+                config.minPosition = -Math.min.apply(Math, config.currentShape[config.whirl * 2 - 1]);
+                console.log('旋转方向：' + config.whirl);
                 break;
             case 40:
-                console.log('下');
+                console.log('加速掉落');
                 break;
             case 37:
                 // 向左移动
+                console.log('向左移动');
                 config.position > config.minPosition ? config.position-- : config.position;
-                  break;
+                break;
             case 39:
                 // 向右移动
+                console.log('向右移动');
                 config.position < config.maxPosition ? config.position++ : config.position;
                 break;
             default:
@@ -183,52 +196,63 @@
     });
 
     function run() {
-        var x = 0;
+        let line = 0;
+        let whirl = config.whirl * 2 - 2;
         // 随机形状
-        let currentShape = config.shape[Math.floor(Math.random() * config.shape.length)];
+        config.currentShape = config.shape[Math.floor(Math.random() * config.shape.length)];
         // 左移动限制 （禁止超出）
-        config.maxPosition= Math.floor($('tr:first').find('td').length / 2) + (Math.floor($('tr:first').find('td').length / 2) - Math.max.apply(Math, currentShape[1]));
+        config.maxPosition = Math.floor($('tr:first').find('td').length / 2) + (Math.floor($('tr:first').find('td').length / 2) - Math.max.apply(Math, config.currentShape[config.whirl * 2 - 1]));
         // 右移动限制 （禁止超出）
-        config.minPosition= -Math.min.apply(Math, currentShape[1]);
+        config.minPosition = -Math.min.apply(Math, config.currentShape[config.whirl * 2 - 1]);
 
         for (let i = 0; i < $('tr').length; i++) {
             config.drop[i] = setTimeout(() => {
-                for (let s = 0; s < currentShape[0].length; s++) {
+                for (let s = 0; s < config.currentShape[0].length; s++) {
                     // 消除上一步移动
-                    if ((x + currentShape[0][s] - 1) >= 0) {
-                        $('tr:eq(' + (x + currentShape[0][s] - 1) + ')').find('td:eq(' + (config.historyPosition + currentShape[1][s]) + ')').removeClass('light');
+                    if ((line + config.currentShape[whirl][s] - 1) >= 0) {
+                        $('tr:eq(' + (line + config.currentShape[whirl][s] - 1) + ')').find('td:eq(' + (config.historyPosition + config.currentShape[whirl + 1][s]) + ')').removeClass('light');
+                    }
+
+                    // 消除上一步后，更新方向
+                    if (s == (config.currentShape[0].length - 1)) {
+                        whirl = config.whirl * 2 - 2;
+                        // console.log(config.currentShape[config.currentShape.length - (whirl + 2) / 2]);
                     }
 
                     // 向下移动
-                    if ((x + currentShape[0][s]) >= 0) {
-                        $('tr:eq(' + (x + currentShape[0][s]) + ')').find('td:eq(' + (config.position + currentShape[1][s]) + ')').addClass('light');
+                    if ((line + config.currentShape[whirl][s]) >= 0) {
+                        console.log('绘制:'+ config.currentShape[whirl + 1][s]);
+                        $('tr:eq(' + (line + config.currentShape[whirl][s]) + ')').find('td:eq(' + (config.position + config.currentShape[whirl + 1][s]) + ')').addClass('light');
                     }
+                    
+
 
                     // 执行结束并初始化位置参数
-                    if (config.stop == true && s == (currentShape[0].length - 1)) {
+                    if (config.stop == true && s == (config.currentShape[0].length - 1)) {
                         for (let d = 0; d < config.drop.length; d++) {
                             clearTimeout(config.drop[d]);
                         }
                         config.position = Math.floor($('tr:first').find('td').length / 2);
-                        clear()?run():console.log('--GAME OVER--');
+                        clear() ? run() : console.log('--GAME OVER--');
                         // 执行后关闭结束开关
                         config.stop = false;
                         return;
                     }
 
                     // 碰撞开启结束开关
-                    if (s < currentShape[2] && $('tr:eq(' + (x + currentShape[0][s] + 1) + ')').find('td:eq(' + (config.position + currentShape[1][s]) + ')').hasClass('light')) {
+                    if (s < config.currentShape[config.currentShape.length - config.whirl] && $('tr:eq(' + (line + config.currentShape[whirl][s] + 1) + ')').find('td:eq(' + (config.position + config.currentShape[whirl + 1][s]) + ')').hasClass('light')) {
                         config.stop = true;
+                        console.log('触碰');
                     }
                 }
 
                 // 触底结束并初始化位置参数
-                if (x == $('tr').length - 1) {
+                if (line == $('tr').length - 1) {
                     config.position = Math.floor($('tr:first').find('td').length / 2);
-                    clear()?run():console.log('--GAME OVER--');
-                } 
+                    clear() ? run() : console.log('--GAME OVER--');
+                }
                 // 下一行
-                x++;
+                line++;
                 // 保存历史位置（用于清除上一步）
                 config.historyPosition = config.position;
 
@@ -262,7 +286,7 @@
         if ($('tr:first').find('.light').length) {
             setTimeout(() => {
                 alert('--GAME OVER--');
-                location.reload();
+                // location.reload();
             }, 200);
             return false;
         }
