--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/home.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1406557_q81sc4rbm88.css">
     <title>PHP54技术博客</title>
@@ -231,28 +232,28 @@
                     <li><a href="javascript:;">PHP54+首页</a></li>
                     <li><a href="javascript:;">所有文章</a></li>
                     <li><a href="javascript:;">关于作者/留言</a></li>
+                    <li><a href="javascript:;">网站地图</a></li>
                     <li><a href="javascript:;">友情链接</a></li>
                 </ul>
             </div>
             <div class="list">
                     <ul>
+                        <li><a href="javascript:;">Cookie政策</a></li>
                         <li><a href="javascript:;">京ICP备18046247号-1</a></li>
                         <li><a href="javascript:;">京公网安备 11010502037664号</a></li>
-                        <li><a href="javascript:;">PHP54技术博客</a></li>
-                        <li><a href="javascript:;">网站地图</a></li>
                     </ul>
                 </div>
             <div class="list">
                 <ul>
-                    <li><a href="javascript:;">陈佚-CHENI | PHP全栈工程师 * 3+ years</a></li>
-                    <li><a href="javascript:;">电话联系（仅限紧急情况）</a></li>
-                    <li class="green"><a href="javascript:;">15901432750</a></li>
-                    <li><a href="javascript:;">微信联系（常用）</a></li>
-                    <li class="green"><a href="javascript:;">K65480169</a></li>
-                    <li><a href="javascript:;">QQ（常年不在线）</a></li>
-                    <li class="green"><a href="javascript:;">654080169</a></li>
-                    <li><a href="javascript:;">邮箱方式（博客运营主要联系方式）</a></li>
-                    <li class="green"><a href="javascript:;">cheni@php54.com</a></li>
+                    <li>陈佚-CHENI | PHP全栈工程师 * 3+ years</li>
+                    <li>电话联系（仅限紧急情况）</li>
+                    <li><a href="tel:15901432750">15901432750</a></li>
+                    <li>微信联系（活跃）</li>
+                    <li>K65480169</li>
+                    <li>QQ（常年不在线）</li>
+                    <li>654080169</li>
+                    <li>邮箱方式（博客运营主要联系方式）</li>
+                    <li><a href="mailto:cheni@php54.com">cheni@php54.com</a></li>
                 </ul>
             </div>
             <p style="clear:both"></p>
@@ -261,4 +262,5 @@
     </footer>
 </body>
 
+<script src="/static/js/notification.js"></script>
 </html>
