--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
             <span><a href="javascript:;">javascript</a></span>
             <span><a href="javascript:;">html/css</a></span>
             <span><a href="javascript:;">关于作者</a></span>
-            <span><i class="iconfont icon-sousuo"></i></span>
-            <input type="text">
         </nav>
     </header>
 
@@ -205,7 +203,11 @@
     </div>
 
     <div class="php54-side-toolbar">
-        <a class="option-box">
+        <a>
+            <i class="iconfont icon-sousuo"></i>
+            <div class="search"><input type="text" maxlength="20" placeholder="回车进行搜索"></div>
+        </a>
+        <a>
             <i class="iconfont icon-qrcode"></i>
             <div class="qr-box">
                 <div class="qr-item-box">
@@ -219,8 +221,7 @@
                 </div>
             </div>
         </a>
-
-        <a href="#top" class="option-box">
+        <a href="#top">
             <i class="iconfont icon-jiantou-copy-copy"></i>
         </a>
     </div>
